--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,8 +6,8 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 20px;
-  background-color: rgb(55, 55, 55);
-  color: blanchedAlmond;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-size: 16px;
   line-height: 1.6;
 }
@@ -39,7 +39,7 @@ em {
 
 hr {
   border: none;
-  border-top: 1px solid blanchedAlmond;
+  border-top: 1px solid #000;
   margin: 20px 0;
 }
 
@@ -56,7 +56,7 @@ table th, table td {
 }
 
 table th {
-  border-bottom: 2px solid blanchedAlmond;
+  border-bottom: 2px solid #000;
   font-weight: bold;
 }
 
