make bar graph reponsive

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -149,3 +149,11 @@ table th {
     margin-bottom: 30px;
   }
 }
+
+#degreeChart {
+  width: 100%;
+  max-width: 800px;
+  height: 400px;
+  display: block;
+  margin: 20px auto;
+}
